tests/error/null_array_access.gw
// [contains] NullPtrException
int i[];
i[0];
